# SuperTrendQuant

./: .env.example  .gitignore  README.md  alpha_dynamic.py  alpha_dynamic_filter.py  alpha_dynamic_qqqfilter.py  backtesst_5.3_analyst.py  backtest.py  backtest3.py  backtest4.py  backtest_5.7.py  backtest_5.8.py  backtest_bench.py  backtest_final.py  backtest_hyper.py  backtest_jo.py  backtest_no_filter.py  backtest_no_filter_anal.py  ewqetg.py  gemini-code-1780845544609 copy.py  gemini-code-1780962086316.py  gemini-code-1781018494053.py  live_alphaexpress_test.py  live_forward_test.py  main.ipynb  main.py  main_17_3.py  main_18_1.py  main_21.py  main_22.py  main_jo.py  main_rs_period.py  openapi.json  pyproject.toml  requirements.txt  test.py  toss_manager.py  universe.json
backtest/: backtest_30m_leader_pykrx.py  backtest_30m_qqqfilter.py  backtest_leader_pure.py  backtest_leader_pure_kr.py  backtest_supertrend_timeframe_compare.py
configs/runtimes/: simulation.yaml
configs/strategies/: README.md  leader_rotation.yaml  main_jo_leader_rotation.yaml
docs/: strategy_runtime.md
jo_factory/docs/: strategy_runtime.md
module/: data.py  run_combo_search.py
supertrend_quant/: __init__.py  cli.py  config.py  data.py  data_cache.py  indicators.py  live_runtime.py  paper_runtime.py  runners.py  strategies.py
tests/: test_config_and_strategy.py  test_live_runtime.py
trash/: backtest2.py  backtest_1h.py  backtest_30m_crash.py  backtest_30m_perfect.py  backtest_5.2.py  backtest_day.py  backtest_gapguard.py  backtest_pure.py  benchmark.py  ethserh.py  gemini-code-1780845544609.py  live_only1_test.py  main_17_5.py  maintest.py  triple_filter_test.py
unified_quant/: README.md
verification/: README.md  verify_combo.py
(+877 files in other folders)
