[project]
name = "super-trend-quant"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "python-dotenv",
    "pyyaml",
    "requests",
    "yfinance",
]

[project.scripts]
quant-backtest = "supertrend_quant.cli:backtest_main"
quant-paper = "supertrend_quant.cli:paper_main"
quant-live = "supertrend_quant.cli:live_main"
quant-compare = "supertrend_quant.cli:compare_main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["supertrend_quant*"]
